Adicionando eureka client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-server.port=5000
+# Spring
+spring.application.name=aws-bucket
+<!--spring.profiles.active=${spring.profiles.active}-->
+server.port=5005
+
+# Eureka
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://192.168.0.26:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
+eureka.instance.appname=${spring.application.name}
+eureka.instance.prefer-ip-address = true
